fix: proxy images for shared access
